# fifa-misogyny-rankings

./: .pre-commit-config.yaml  README.md  fifa-misogyny-rankings.code-workspace  pyproject.toml
.github/workflows/: build.yaml
rankings/: fifa_api.py  fifa_rankings_response.py  fifa_web.py  misogyny.py  rankings_women.json
