[tool.poetry]
name = "package"
version = "0.1.0"
description = "my package solutions"
authors = ["Louie Brann <louis.brann+github@gmail.com>"]
readme = "README.md"
packages = [{include = "package"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^0.990"
black = "^22.10.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
