[tool.poetry]
name = "FIFA Misogyny Rankings"
version = "0.1.0"
description = "identify the countries with the biggest disparity between Womens and Mens rankings"
authors = ["Louie Brann <louis.brann+github@gmail.com>"]
readme = "README.md"
packages = [{include = "rankings"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^0.990"
black = "^22.10.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
